--- a/charts/prometheus-mysql-exporter/values.yaml
+++ b/charts/prometheus-mysql-exporter/values.yaml
@@ -122,10 +122,13 @@ annotations:
   prometheus.io/path: "/metrics"
   prometheus.io/port: "9104"
 
-config: {}
+config:
   # Allow to set specifc options on the exporter
   # logLevel: info
   # logFormat: "logger:stderr"
+  #
+  # extra arguments as a list of strings
+  extraArgs: []
 
 collectors: {}
   # auto_increment.columns: false
