--- a/charts/prometheus/values.yaml
+++ b/charts/prometheus/values.yaml
@@ -453,7 +453,7 @@ server:
   ##
   podDisruptionBudget:
     enabled: false
-    maxUnavailable: 1
+    # maxUnavailable: 1
     # minAvailable: 1
     ## unhealthyPodEvictionPolicy is available since 1.27.0 (beta)
     ## https://kubernetes.io/docs/tasks/run-application/configure-pdb/#unhealthy-pod-eviction-policy
