--- a/charts/prometheus/templates/pdb.yaml
+++ b/charts/prometheus/templates/pdb.yaml
@@ -22,5 +22,5 @@ spec:
   {{- end }}
   {{- if hasKey $pdbSpec "unhealthyPodEvictionPolicy" }}
   unhealthyPodEvictionPolicy: {{ $pdbSpec.unhealthyPodEvictionPolicy }}
-  {{- end }}}}
+  {{- end }}
 {{- end }}
