--- a/charts/prometheus-postgres-exporter/values.yaml
+++ b/charts/prometheus-postgres-exporter/values.yaml
@@ -189,6 +189,12 @@ config:
     #     options:
     #       sslmode: disable
 
+  # define an existing secret to be mounted as the config file
+  # needs to have the key 'postgres_exporter.yml'
+  existingSecret:
+    enabled: false
+    name: ""
+
 nodeSelector: {}
 
 tolerations: []
