chore: Add instance label information to the prometheusrule description
Signed-off-by: liyang <ly18846162402@163.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/node-network.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/rules-1.14/node-network.yaml
@@ -33,7 +33,7 @@ spec:
 {{- if .Values.defaultRules.additionalRuleGroupAnnotations.network }}
 {{ toYaml .Values.defaultRules.additionalRuleGroupAnnotations.network | indent 8 }}
 {{- end }}
-        description: Network interface "{{`{{`}} $labels.device {{`}}`}}" changing its up status often on node-exporter {{`{{`}} $labels.namespace {{`}}`}}/{{`{{`}} $labels.pod {{`}}`}}
+        description: The network interface "{{`{{`}} $labels.device {{`}}`}}" at "{{`{{`}} $labels.instance {{`}}`}}" changing its up status often on node-exporter {{`{{`}} $labels.namespace {{`}}`}}/{{`{{`}} $labels.pod {{`}}`}}.
         runbook_url: {{ .Values.defaultRules.runbookUrl }}/general/nodenetworkinterfaceflapping
         summary: Network interface is often changing its status
       expr: changes(node_network_up{job="node-exporter",device!~"veth.+"}[2m]) > 2
