[prometheus-postgresql-exporter] fix template
fix bad rendering when serviceMonitor.enabled=true without serviceMonitor.multipleTarget.enabled

Signed-off-by: Julien Francoz <julien@les-tilleuls.coop>

--- a/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
+++ b/charts/prometheus-postgres-exporter/templates/servicemonitor.yaml
@@ -57,7 +57,7 @@ spec:
         {{- end }}
   {{- end }}
 {{- end }}
-{{- if not .Values.serviceMonitor.multipleTarget.enabled -}}
+{{- if not .Values.serviceMonitor.multipleTarget.enabled }}
   endpoints:
   - port: {{ .Values.service.name }}
 {{- if .Values.serviceMonitor.interval }}
