feat: add revisionHistoryLimit to prometheus-nginx-exporter

--- a/charts/prometheus-nginx-exporter/values.yaml
+++ b/charts/prometheus-nginx-exporter/values.yaml
@@ -72,6 +72,10 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+## Number of replicasets to retain ##
+## default value is 10, 0 will not retain any replicasets and make rollbacks impossible ##
+revisionHistoryLimit: 10
+
 serviceMonitor:
   # When set true then use a ServiceMonitor to configure scraping
   enabled: false
