feat: add revisionHistoryLimit to prometheus-opencost-exporter

--- a/charts/prometheus-opencost-exporter/templates/deployment.yaml
+++ b/charts/prometheus-opencost-exporter/templates/deployment.yaml
@@ -9,6 +9,7 @@ metadata:
   {{- end }}
 spec:
   replicas: {{ .Values.opencost.exporter.replicas }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels: {{- include "prometheus-opencost-exporter.selectorLabels" . | nindent 6 }}
   strategy:
