--- a/charts/prometheus-opencost-exporter/values.yaml
+++ b/charts/prometheus-opencost-exporter/values.yaml
@@ -32,6 +32,10 @@ priorityClassName: ~
 podSecurityContext: {}
   # fsGroup: 2000
 
+## Number of replicasets to retain ##
+## default value is 10, 0 will not retain any replicasets and make rollbacks impossible ##
+revisionHistoryLimit: 10
+
 service:
   enabled: true
   # --  Annotations to add to the service
