--- a/charts/prometheus-pgbouncer-exporter/templates/deployment.yaml
+++ b/charts/prometheus-pgbouncer-exporter/templates/deployment.yaml
@@ -12,6 +12,7 @@ metadata:
     heritage: {{ .Release.Service }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       app: {{ template "prometheus-pgbouncer-exporter.name" . }}
