feat: add revisionHistoryLimit to prometheus-pingdom-exporter

--- a/charts/prometheus-pingdom-exporter/templates/deployment.yaml
+++ b/charts/prometheus-pingdom-exporter/templates/deployment.yaml
@@ -6,6 +6,7 @@ metadata:
     {{- include "prometheus-pingdom-exporter.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       {{- include "prometheus-pingdom-exporter.selectorLabels" . | nindent 6 }}
