feat: add revisionHistoryLimit to prometheus-pingmesh-exporter
Signed-off-by: Carsten Sonyi <carsten.sonyi@yahoo.de>

--- a/charts/prometheus-pingmesh-exporter/templates/deployment.yaml
+++ b/charts/prometheus-pingmesh-exporter/templates/deployment.yaml
@@ -8,6 +8,7 @@ metadata:
     {{- include "prometheus-pingmesh-exporter.labels" . | nindent 4 }}
 spec:
   replicas: {{ .Values.replicas }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       {{- include "prometheus-pingmesh-exporter.selectorLabels" . | nindent 6 }}
