--- a/charts/prometheus-pingmesh-exporter/values.yaml
+++ b/charts/prometheus-pingmesh-exporter/values.yaml
@@ -252,6 +252,10 @@ resources: {}
   #  cpu: 200m
   #  memory: 256Mi
 
+## Number of replicasets to retain ##
+## default value is 10, 0 will not retain any replicasets and make rollbacks impossible ##
+revisionHistoryLimit: 10
+
 priorityClassName: ""
 
 service:
