--- a/charts/prometheus-pushgateway/values.yaml
+++ b/charts/prometheus-pushgateway/values.yaml
@@ -108,6 +108,10 @@ resources: {}
   #   cpu: 100m
   #   memory: 30Mi
 
+## Number of replicasets to retain ##
+## default value is 10, 0 will not retain any replicasets and make rollbacks impossible ##
+revisionHistoryLimit: 10
+
 # -- Sets web configuration
 # To enable basic authentication, provide basicAuthUsers as a map
 webConfiguration: {}
