feat: add revisionHistoryLimit to prometheus-redis-exporter
Signed-off-by: Carsten Sonyi <carsten.sonyi@yahoo.de>

--- a/charts/prometheus-redis-exporter/templates/deployment.yaml
+++ b/charts/prometheus-redis-exporter/templates/deployment.yaml
@@ -8,6 +8,7 @@ metadata:
 {{ toYaml .Values.annotations | indent 4 }}
 spec:
   replicas: {{ .Values.replicaCount }}
+  revisionHistoryLimit: {{ .Values.revisionHistoryLimit }}
   selector:
     matchLabels:
       {{- include "prometheus-redis-exporter.selectorLabels" . | nindent 6 }}
