--- a/charts/prometheus-redis-exporter/values.yaml
+++ b/charts/prometheus-redis-exporter/values.yaml
@@ -44,6 +44,10 @@ service:
     # prometheus.io/scrape: "true"
 resources: {}
 
+## Number of replicasets to retain ##
+## default value is 10, 0 will not retain any replicasets and make rollbacks impossible ##
+revisionHistoryLimit: 10
+
 nodeSelector: {}
 
 tolerations: []
