feat: add revisionHistoryLimit as a value to multiple deployments
Signed-off-by: Carsten Sonyi <carsten.sonyi@yahoo.de>

--- a/charts/prometheus-blackbox-exporter/values.yaml
+++ b/charts/prometheus-blackbox-exporter/values.yaml
@@ -194,6 +194,10 @@ resources: {}
   # requests:
   #   memory: 50Mi
 
+## Number of replicasets to retain ##
+## default value is 10, 0 will not retain any replicasets and make rollbacks impossible ##
+revisionHistoryLimit: 10
+
 priorityClassName: ""
 
 service:
