--- a/charts/prometheus-cloudwatch-exporter/values.yaml
+++ b/charts/prometheus-cloudwatch-exporter/values.yaml
@@ -61,6 +61,10 @@ resources: {}
   #   cpu: 100m
   #   memory: 128Mi
 
+## Number of replicasets to retain ##
+## default value is 10, 0 will not retain any replicasets and make rollbacks impossible ##
+revisionHistoryLimit: 10
+
 aws:
   role:
   # Enables usage of regional STS endpoints rather than global which is default
