[kube-prometheus-stack] fix gateway podSelector handling in NetworkPolicy
Handle empty podLabels case:
- Omit podSelector when gateway.podLabels is empty/null
- Update conditional check in template
- Add test case for empty podLabels scenario

Signed-off-by: samuelarogbonlo <sbayo971@gmail.com>

--- a/charts/kube-prometheus-stack/templates/alertmanager/networkpolicy.yaml
+++ b/charts/kube-prometheus-stack/templates/alertmanager/networkpolicy.yaml
@@ -19,9 +19,11 @@ spec:
         - namespaceSelector:
             matchLabels:
               kubernetes.io/metadata.name: {{ .Values.alertmanager.networkPolicy.gateway.namespace }}
+          {{- if and .Values.alertmanager.networkPolicy.gateway.podLabels (not (empty .Values.alertmanager.networkPolicy.gateway.podLabels)) }}
           podSelector:
             matchLabels:
               {{- toYaml .Values.alertmanager.networkPolicy.gateway.podLabels | nindent 14 }}
+          {{- end }}
       ports:
         - port: {{ .Values.alertmanager.service.port }}
           protocol: TCP
