--- a/charts/kube-prometheus-stack/unittests/alertmanager/networkpolicy_test.yaml
+++ b/charts/kube-prometheus-stack/unittests/alertmanager/networkpolicy_test.yaml
@@ -128,3 +128,23 @@ tests:
           value:
             - Ingress
             - Egress
+
+  - it: should handle empty gateway pod labels
+    set:
+      alertmanager.enabled: true
+      alertmanager.networkPolicy.enabled: true
+      alertmanager.networkPolicy.gateway.namespace: custom-gateway
+      alertmanager.networkPolicy.gateway.podLabels: null
+      alertmanager.networkPolicy.policyTypes[0]: Ingress
+      alertmanager.service.port: 9093
+    asserts:
+      - hasDocuments:
+          count: 1
+      - isKind:
+          of: NetworkPolicy
+      - equal:
+          path: spec.ingress[0].from[0].namespaceSelector.matchLabels["kubernetes.io/metadata.name"]
+          value: custom-gateway
+      - equal:
+          path: spec.ingress[0].ports[0].port
+          value: 9093
