[prometheus-blackbox-exporter] Add missing port names to ServiceMonitor endpoints
Since the port names are hardcoded in the service.yaml file, we can just reference them by name instead of templating their values.

Signed-off-by: Sebastian Hoß <seb@xn--ho-hia.de>

--- a/charts/prometheus-blackbox-exporter/templates/selfservicemonitor.yaml
+++ b/charts/prometheus-blackbox-exporter/templates/selfservicemonitor.yaml
@@ -16,9 +16,7 @@ spec:
     interval: {{ .Values.serviceMonitor.selfMonitor.interval }}
     scrapeTimeout: {{ .Values.serviceMonitor.selfMonitor.scrapeTimeout }}
     scheme: {{ .Values.serviceMonitor.selfMonitor.scheme }}
-    {{- with .Values.serviceMonitor.selfMonitor.port }}
-    port: {{ . }}
-    {{- end }}
+    port: http
     {{- if .Values.serviceMonitor.selfMonitor.additionalMetricsRelabels }}
     metricRelabelings:
       {{- toYaml .Values.serviceMonitor.selfMonitor.additionalMetricsRelabels | nindent 6 }}
@@ -36,6 +34,7 @@ spec:
     interval: {{ .Values.configReloader.serviceMonitor.selfMonitor.interval }}
     scrapeTimeout: {{ .Values.configReloader.serviceMonitor.selfMonitor.scrapeTimeout }}
     scheme: {{ .Values.configReloader.serviceMonitor.selfMonitor.scheme }}
+    port: reloader-web
     {{- if .Values.configReloader.serviceMonitor.selfMonitor.tlsConfig }}
     tlsConfig:
       {{- toYaml .Values.configReloader.serviceMonitor.selfMonitor.tlsConfig | nindent 6 }}
